--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 
           <div class="links" style="margin-top:12px">
             <a class="btn" href="https://www.openstreetmap.org/?mlat=32.8239&mlon=73.9549#map=16/32.8239/73.9549" target="_blank" rel="noopener">OpenStreetMap</a>
-            <a class="btn" href="https://www.google.com/maps/place/32.8239,73.9549" target="_blank" rel="noopener">Google Maps</a>
+            <a class="btn" href="https://www.google.com/maps/place/32.8214133,73.9449421" target="_blank" rel="noopener">Google Maps</a>
             <a class="btn" href="https://en.wikipedia.org/wiki/Bhagwal,_Gujrat" target="_blank" rel="noopener">Wikipedia</a>
-          </div>
+          </div> 
         </div>
 
         <div class="card" style="margin-top:14px">
