--- a/index.html
+++ b/index.html
@@ -92,11 +92,13 @@
           <ul class="landmarks">
             <li>Jamia Masjid Gulzar-e-Madina</li>
            <li> Madni Masjid</li>
+            <li>Masjid Muhammadia Ghousia</li>
             <li>Jamia Masjid Hazrat Bilal</li>
             <li>Masjid Nimra</li>
-            <li>Masjid Faizane Ishq</li>
-            <li>Masjid Abbas </li>
+            <li>Masjid Faizane Ishq Rasool S.A.W</li>
+            <li>Masjid Abbas R.A</li>
            <li>Makki Masjid</li>
+            <li>Noor Masjid</li>
             <li>Govt. High School (Boys &amp; Girls)</li>
           </ul>
         </div>
