--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
            <li>Makki Masjid</li>
             <li>Noor Masjid</li>
             <li>Govt. High School (Boys &amp; Girls)</li>
+            <li>Union Council Office UC-92</li>
           </ul>
         </div>
 
