--- a/index.html
+++ b/index.html
@@ -1,135 +1,196 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Bhagwal — Village & Union Council (Kharian, Gujrat)</title>
-  <meta name="description" content="Bhagwal — a village & union council in Kharian Tehsil, Gujrat District, Punjab, Pakistan. Documentation, landmarks, maps and ways to contribute." />
-  <meta name="author" content="Murshad87 / Bhagwal Community" />
-
-  <!-- Open Graph -->
-  <meta property="og:title" content="Bhagwal — Village & Union Council, Kharian, Gujrat" />
-  <meta property="og:description" content="Documentation and digital archive for Bhagwal (correct spelling). Coordinates: 32.8239° N, 73.9549° E." />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="/og-image.png" />
-
-  <!-- JSON-LD place data -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Place",
-    "name": "Bhagwal",
-    "alternateName":بھگوال
-    "description": "Bhagwal is a village and union council in Kharian Tehsil, Gujrat District, Punjab, Pakistan.",
-    "geo": { "@type": "GeoCoordinates", "latitude": "32.8239", "longitude": "73.9549" },
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "Bhagwal",
-      "addressRegion": "Punjab",
-      "addressCountry": "PK"
-    }
-  }
-  </script>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bhagwal - Digital Village</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    :root{--bg:#0f1724;--card:#0b1220;--muted:#94a3b8;--accent:#0ea5a4;--glass:rgba(255,255,255,0.035)}
-    *{box-sizing:border-box}
-    body{font-family:Inter,system-ui,Segoe UI,Roboto,"Helvetica Neue",Arial;line-height:1.5;margin:0;background:linear-gradient(180deg,#f8fafc,#eef2ff);color:#0f1724}
-    .wrap{max-width:980px;margin:28px auto;padding:20px}
-    header{display:flex;gap:16px;align-items:center}
-    .logo{width:68px;height:68px;border-radius:8px;background:var(--accent);display:grid;place-items:center;color:#fff;font-weight:700;font-size:20px}
-    h1{margin:0;font-size:24px}
-    p.lead{color:var(--muted);margin:6px 0 18px}
-    .grid{display:grid;grid-template-columns:1fr 320px;gap:20px}
-    .card{background:#fff;border-radius:12px;padding:16px;box-shadow:0 6px 18px rgba(15,23,36,0.06)}
-    .small{font-size:13px;color:var(--muted)}
-    ul.list{padding-left:18px;margin:8px 0}
-    a.btn{display:inline-block;padding:8px 12px;border-radius:8px;text-decoration:none;background:var(--accent);color:#063; color:#fff;font-weight:600}
-    .links a{display:inline-block;margin-right:8px;margin-bottom:8px}
-    .coords{font-weight:700}
-    .landmarks li{margin:6px 0}
-    .gallery{display:grid;grid-template-columns:repeat(3,1fr);gap:8px}
-    .gallery img{width:100%;height:80px;object-fit:cover;border-radius:6px}
-    footer{margin-top:18px;font-size:13px;color:var(--muted)}
-    @media (max-width:900px){.grid{grid-template-columns:1fr}.gallery{grid-template-columns:repeat(2,1fr)}}
+    body {
+      font-family: 'Roboto', sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+      background: #f7f7f7;
+      color: #333;
+    }
+    header {
+      background: #2c7a7b;
+      color: white;
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.2rem;
+    }
+    header p {
+      margin-top: 0.5rem;
+      font-size: 1.1rem;
+    }
+    nav {
+      margin-top: 1rem;
+    }
+    nav a {
+      color: white;
+      margin: 0 10px;
+      text-decoration: none;
+      font-weight: 500;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+    section {
+      margin-bottom: 2rem;
+      background: white;
+      padding: 1.5rem;
+      border-radius: 10px;
+      box-shadow: 0 3px 6px rgba(0,0,0,0.1);
+    }
+    h2 {
+      color: #2c7a7b;
+      margin-top: 0;
+    }
+    ul {
+      list-style: none;
+      padding-left: 0;
+    }
+    li {
+      margin-bottom: 0.5rem;
+    }
+    a {
+      color: #2c7a7b;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    iframe {
+      width: 100%;
+      height: 400px;
+      border: none;
+      border-radius: 10px;
+    }
+    pre {
+      background: #f4f4f4;
+      padding: 10px;
+      border-radius: 5px;
+      overflow-x: auto;
+    }
+    .tags {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-top: 10px;
+    }
+    .tag {
+      background: #2c7a7b;
+      color: white;
+      padding: 5px 10px;
+      border-radius: 5px;
+      font-size: 0.9rem;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background: #2c7a7b;
+      color: white;
+    }
   </style>
 </head>
 <body>
-  <main class="wrap">
-    <header>
-      <div class="logo">BW</div>
-      <div>
-        <h1>Bhagwal — Village & Union Council</h1>
-        <p class="lead">Kharian Tehsil, Gujrat District, Punjab, Pakistan — correct spelling: <strong>Bhagwal</strong> (not Bhugwal)</p>
-      </div>
-    </header>
 
-    <section class="grid" aria-labelledby="about">
-      <div>
-        <div class="card" id="about">
-          <h2 style="margin-top:0;">About Bhagwal</h2>
-          <p class="small">This page documents Bhagwal village and union council in Kharian Tehsil. Contributions welcome: photos, historical notes, mapping corrections, and local resources.</p>
+<header>
+  <h1>Welcome to Bhagwal</h1>
+  <p>Digital Village Project – Gujrat, Punjab, Pakistan</p>
+  <nav>
+    <a href="#about">About</a> |
+    <a href="#map">Map</a> |
+    <a href="#landmarks">Landmarks</a> |
+    <a href="#mcp">MCP</a> |
+    <a href="#history">History</a> |
+    <a href="#resources">Resources</a> |
+    <a href="#tags">Tags</a>
+  </nav>
+</header>
 
-          <dl style="display:grid;grid-template-columns:120px 1fr;gap:6px 12px;margin-top:12px">
-            <dt class="small">Province</dt><dd>Punjab</dd>
-            <dt class="small">District</dt><dd>Gujrat</dd>
-            <dt class="small">Tehsil</dt><dd>Kharian</dd>
-            <dt class="small">Coordinates</dt><dd class="coords">32.821396° N, 73.955242° E</dd>
-            <dt class="small">Postal Code</dt><dd>50151</dd>
-          </dl>
+<main>
 
-          <p style="margin-top:12px">Correct spelling and mapping has been updated on OpenStreetMap. Please help by reporting corrections on other platforms.</p>
+  <section id="about">
+    <h2>About Bhagwal</h2>
+    <p>Bhagwal is a village in Kharian Tehsil, District Gujrat, Punjab, Pakistan. This project provides open digital data, mapping, and AI integration (MCP) to showcase village landmarks, schools, mosques, and local points of interest.</p>
+  </section>
 
-          <div class="links" style="margin-top:12px">
-            <a class="btn" href="https://www.openstreetmap.org/?mlat=32.821396&mlon=73.955242#map=16/32.821396/73.955242" target="_blank" rel="noopener">OpenStreetMap</a>
-            <a class="btn" href="https://www.google.com/maps/place/32.821396,73.955242" target="_blank" rel="noopener">Google Maps</a>
-            <a class="btn" href="https://en.wikipedia.org/wiki/Bhagwal,_Gujrat" target="_blank" rel="noopener">Wikipedia</a>
-          </div> 
-        </div>
+  <section id="map">
+    <h2>Location</h2>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1830.5303811847696!2d73.95865944285462!3d32.825941723250146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzLCsDQ5JzM2LjMiTiA3M8KwNTcnMjYuMyJF!5e0!3m2!1sen!2s!4v1707900000000" allowfullscreen="" loading="lazy"></iframe>
+    <p><a href="https://www.google.com/maps?q=32.8213957,73.9552418" target="_blank">View on Google Maps</a></p>
+  </section>
 
-        <div class="card" style="margin-top:14px">
-          <h3 style="margin:0 0 6px 0">Notable Landmarks</h3>
-          <ul class="landmarks">
-            <li>Jamia Masjid Gulzar-e-Madina</li>
-           <li> Madni Masjid</li>
-            <li>Masjid Muhammadia Ghousia</li>
-            <li>Jamia Masjid Hazrat Bilal</li>
-            <li>Masjid Nimra</li>
-            <li>Masjid Faizane Ishq Rasool S.A.W</li>
-            <li>Masjid Abbas R.A</li>
-           <li>Makki Masjid</li>
-            <li>Noor Masjid</li>
-            <li>Govt. High School (Boys &amp; Girls)</li>
-            <li>Union Council Office UC-92</li>
-          </ul>
-        </div>
+  <section id="landmarks">
+    <h2>Landmarks</h2>
+    <ul>
+      <li>🕌 Jamia Mosque Gulzare Madina Bhagwal</li>
+      <li>🕌 Masjid Abbas (RA)</li>
+      <li>🕌 Jamia Masjid Hazrat Bilal</li>
+      <li>🕌 Majid Nimra Bhagwal</li>
+      <li>🕌 Madni Masjid Lehnda Mohalah</li>
+       li>🕌 Masjid Mohammadia Ghousia Mohalah Dakhan</li>
+       li>🕌 Makki Majid Bhagwal</li>
+      <li>🏫 Government Boys High School Bhagwal</li>
+      <li>🏫 Government Boys Primary School Bhagwal</li>
+      <li>🏫 Government Girls High School Bhagwal</li>
+      <li>🏫 Government Girls Primary School Bhagwal</li>
+      <li>🛍️ Union Counicil office Bhagwal</li>
+    </ul>
+  </section>
 
-  
+  <section id="mcp">
+    <h2>MCP Integration</h2>
+    <p>This site integrates with the <a href="https://github.com/mcp" target="_blank">Model Context Protocol (MCP)</a> to provide AI systems with structured village data.</p>
+    <p>Example JSON endpoint:</p>
+    <pre><code>GET https://murshad87.github.io/Bhagwal/mcp/bhagwal.info</code></pre>
+  </section>
 
-      </div>
+  <section id="history">
+    <h2>History & Culture</h2>
+    <p>Bhagwal is known for its rich cultural heritage, including traditional architecture, local crafts, and community festivals. The village has a history of over 200 years, with landmarks such as historic mosques and schools.</p>
+    <ul>
+      <li>🏛️ Traditional village architecture</li>
+      <li>🎉 Local festivals and events</li>
+      <li>🕌 Historic mosques</li>
+    </ul>
+  </section>
 
-      <aside>
-        <div class="card">
-          <h3 style="margin-top:0">Quick Info</h3>
-          <p class="small">Union Council: Bhagwal (UC-92)</p>
-          <p class="small">Timezone: PKT (UTC+5)</p>
-          <p class="small">Population (approx): 10,600</p>
-          <p class="small">Police Station Guliana</p>
-          <p class="small">Nearest Railway Station, Lalamusa Railway Junction</p>
+  <section id="resources">
+    <h2>Resources</h2>
+    <ul>
+      <li><a href="https://vymaps.com/PK/Bhagwal-Gujrat-216825875008664/" target="_blank">Bhagwal on VyMaps</a></li>
+      <li><a href="https://github.com/Murshad87/Bhagwal" target="_blank">GitHub Repository</a></li>
+    </ul>
+  </section>
 
-          <hr style="margin:12px 0">
+  <section id="tags">
+    <h2>Tags / Topics</h2>
+    <div class="tags">
+      <span class="tag">Bhagwal</span>
+      <span class="tag">Kharian</span>
+      <span class="tag">Gujrat</span>
+      <span class="tag">Punjab</span>
+      <span class="tag">Pakistan</span>
+    </div>
+  </section>
 
-        
-      <h2 style="margin-top:0">Community Note</h2>
-      <p class="small">This repository corrects the spelling and documents places in Bhagwal village. If you find outdated spellings like <strong>Bhugwal</strong> on third‑party services, please report them and link back to trusted sources such as OpenStreetMap and Wikipedia.</p>
+</main>
 
-      <h3 style="margin-top:12px">Contact & Contribution</h3>
-      <p class="small">To contribute: open a Pull Request, add photos to <code>/images/</code>, or suggest edits via Issues.</p>
-    </section>
+<footer>
+  &copy; 2025 Murshad87 – Digital Village Initiative
+</footer>
 
-    <footer>
-      <div class="small">© Bhagwal Community • Built for documentation and mapping. Coordinates: 32.8239, 73.9549</div>
-    </footer>
-  </main>
 </body>
 </html>
