Update landmarks list in index.html
update

--- a/index.html
+++ b/index.html
@@ -136,12 +136,13 @@
     <h2>Landmarks</h2>
     <ul>
       <li>🕌 Jamia Mosque Gulzare Madina Bhagwal</li>
-      <li>🕌 Masjid Abbas (RA)</li>
+      <li>🕌 Masjid Abbas (RA) Bhagwal</li>
       <li>🕌 Jamia Masjid Hazrat Bilal</li>
       <li>🕌 Majid Nimra Bhagwal</li>
       <li>🕌 Madni Masjid Lehnda Mohalah</li>
-       li>🕌 Masjid Mohammadia Ghousia Mohalah Dakhan</li>
-       li>🕌 Makki Majid Bhagwal</li>
+      <li>🕌 Masjid Mohammadia Ghousia Mohalah Dakhan</li>
+      <li>🕌 Makki Masjid Bhagwal</li>
+      <li>🕌 Masjid Faizane ishqe Rasool S.A.W Bhagwal</li>
       <li>🏫 Government Boys High School Bhagwal</li>
       <li>🏫 Government Boys Primary School Bhagwal</li>
       <li>🏫 Government Girls High School Bhagwal</li>
