Add structured data for Bhagwal location
Added JSON-LD structured data for Bhagwal location.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,27 @@
 <html lang="en">
 <head><meta name="google-site-verification" content="miBfY5XwiAeLHOKvM6vK8dFBOXe6jqDx3hloj4ot8Rg" />
   <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8">
+    <title>Bhagwal, Kharian Tehsil, Gujrat District, Punjab, Pakistan</title>
+
+    <!-- JSON-LD structured data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Place",
+      "name": "Bhagwal",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Kharian Tehsil",
+        "addressRegion": "Gujrat District, Punjab",
+        "addressCountry": "Pakistan"
+      },
+      "url": "https://github.com/topics/bhagwal"
+    }
+    </script>
+</head>
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bhagwal - Digital Village</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
