Fix geographic coordinates and map embed link
Updated geographic coordinates and map link for Bhagwal.

--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@
     "name": "Bhagwal",
     "geo": {
       "@type": "GeoCoordinates",
-      "latitude": 32.8214133107133,
-      "longitude": 73.94494208774944
+      "latitude": 32.8213957,
+      "longitude": 73.9552418
     },
     "address": {
       "@type": "PostalAddress",
       "addressLocality": "Kharian Tehsil",
       "addressRegion": "Gujrat District, Punjab",
-      "addressCountry": "Pakistan"
+      "addressCountry": "Pakistan",
+      "postalCode": "",
+      "streetAddress": ""
     },
+    "plusCode": "RXC4+C84, Bhagwal, Pakistan",
     "url": "https://github.com/topics/bhagwal",
     "sameAs": [
       "https://vymaps.com/PK/Bhagwal-Gujrat-216825875008664/",
@@ -176,14 +179,14 @@
 
   <section id="map">
     <h2>Location</h2>
+    <!-- Exact coordinates to avoid ambiguity -->
     <iframe 
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10355.571492436533!2d73.94494208774944!3d32.8214133107133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391fa6bf10782fbf%3A0x71850a23cd4e8def!2sBhagwal%2C%20Pakistan!5e1!3m2!1sen!2sae!4v1760621867468!5m2!1sen!2sae" 
+      src="https://www.google.com/maps?q=32.8213957,73.9552418&output=embed" 
       allowfullscreen="" 
-      loading="lazy" 
-      referrerpolicy="no-referrer-when-downgrade">
+      loading="lazy">
     </iframe>
     <p>
-      <a href="https://www.google.com/maps?q=32.8214133107133,73.94494208774944" target="_blank">
+      <a href="https://www.google.com/maps?q=RXC4+C84,+Bhagwal,+Gujrat,+Pakistan" target="_blank">
         View on Google Maps
       </a>
     </p>
