Update geographical and address information in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     "name": "Bhagwal",
     "geo": {
       "@type": "GeoCoordinates",
-      "latitude": 32.8213957,
+      "latitude": 32.8213957, 
       "longitude": 73.9552418
     },
     "address": {
@@ -22,14 +22,14 @@
       "addressLocality": "Kharian Tehsil",
       "addressRegion": "Gujrat District, Punjab",
       "addressCountry": "Pakistan",
-      "postalCode": "",
+      "postalCode": "50151",
       "streetAddress": ""
     },
-    "plusCode": "RXC4+C84, Bhagwal, Pakistan",
+    "plusCode": "RXC4+C84, Bhagwal, Kharian, Gujrat, Pakistan",
     "url": "https://github.com/topics/bhagwal",
     "sameAs": [
       "https://vymaps.com/PK/Bhagwal-Gujrat-216825875008664/",
-      "https://en.wikipedia.org/wiki/Bhagwal"
+      "https://en.wikipedia.org/wiki/Bhagwal, Gujrat"
     ]
   }
   </script>
