--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       "postalCode": "50151",
       "streetAddress": ""
     },
-    "plusCode": "RXC4+C84, Bhagwal, Kharian, Gujrat, Pakistan",
+    "plusCode": "RXC4+C84, Bhagwal, Pakistan",
     "url": "https://github.com/topics/bhagwal",
     "sameAs": [
       "https://vymaps.com/PK/Bhagwal-Gujrat-216825875008664/",
@@ -186,7 +186,7 @@
       loading="lazy">
     </iframe>
     <p>
-      <a href="https://www.google.com/maps?q=RXC4+C84,+Bhagwal,+Gujrat,+Pakistan" target="_blank">
+      <a href="https://www.google.com/maps?q=RXC4+C84,+Bhagwal,+Kharian,+Gujrat,+Pakistan" target="_blank">
         View on Google Maps
       </a>
     </p>
