Update Google Maps link in index.html

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       loading="lazy">
     </iframe>
     <p>
-      <a href="https://www.google.com/maps?q=RXC4+C84 Bhagwal,+Kharian,+Gujrat,+ Pakistan" target="_blank">
+      <a href="https://www.google.com/maps?q= Bhagwal,+Kharian,+Gujrat,+ Pakistan" target="_blank">
         View on Google Maps
       </a>
     </p>
